[gd_scene load_steps=6 format=3 uid="uid://dx0k53qtjbslk"]

[ext_resource type="Script" path="res://Graph/newUI/new.gd" id="1_6cjoa"]
[ext_resource type="Script" path="res://Graph/newUI/scripts/close.gd" id="1_pcptc"]
[ext_resource type="PackedScene" uid="uid://dfjukyau5egf6" path="res://animation/fileanimation.tscn" id="2_tp2fx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1e4kd"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.305882)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yby5j"]
bg_color = Color(0.333333, 0.333333, 0.333333, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5

[node name="new" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6cjoa")

[node name="Control" parent="." instance=ExtResource("2_tp2fx")]
layout_mode = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 90.0
offset_top = -133.001
offset_right = -97.0
offset_bottom = 128.999
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1e4kd")

[node name="GridContainer" type="GridContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 32.0
offset_right = -24.0
offset_bottom = -25.002
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="text" type="Button" parent="Control/Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yby5j")
text = "نص"

[node name="photo" type="Button" parent="Control/Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yby5j")
text = "صورة"

[node name="arrow" type="Button" parent="Control/Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.54902, 0.54902, 0.54902, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yby5j")
text = "سهم"

[node name="draw" type="Button" parent="Control/Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.32549, 0.32549, 0.32549, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yby5j")
text = "لوح"

[node name="graph" type="Button" parent="Control/Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.54902, 0.54902, 0.54902, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yby5j")
text = "جدول"

[node name="Button6" type="Button" parent="Control/Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.32549, 0.32549, 0.32549, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yby5j")
text = "ملف"

[node name="Button" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 37.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
text = "X"
flat = true
script = ExtResource("1_pcptc")

[connection signal="on_close" from="Control" to="." method="_on_control_on_close"]
[connection signal="pressed" from="Control/Panel/GridContainer/text" to="." method="_on_text_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/photo" to="." method="_on_photo_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/arrow" to="." method="_on_arrow_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="Control/Panel/GridContainer/graph" to="." method="_on_graph_pressed"]
